<resources>
    <string name="app_name">LuggageForecast</string>
    <string name="action_about_text">About</string>
    <string name="fragment_about">About the app</string>
    <string name="introduceNameOfTheTrip">Name of the trip</string>
    <string name="introduceNameOfDestiny">Name of destiny</string>
    <string name="introduceStartingDate">Starting date</string>
    <string name="introduceEndingDate">Ending date</string>
    <string name="addItem">ADD</string>
    <string name="cancel">Cancel</string>
    <string name="end">END</string>
    <string name="start">START</string>
    <string name="destiny">DESTINY</string>
    <string name="name">NAME</string>
    <string name="eraseTripCV">Erase trip</string>
    <string name="editTripCV">Edit trip</string>
    <string name="threedotsmenu">ThreeDotsMenu</string>

    <!-- TODO: Remove or change this placeholder text -->
    <string name="main_text_about_fragment">Hi!\nMy name is Asier Serrano, a sophomore at Polythecnic University of Valencia, Spain. I am the developer of this simple mobile app. I hope it has helped you to make your luggage for some trip!\nIf you want to know more about me, you can visit my webpage at https://asicoderofficial.github.io/Asicoder.github.io/ or send me an e-mail to asicoderofficial@gmail.com\nGreat feedback in order to improve is welcome! :)</string>
    <string name="webpage_link"><a href="https://asicoderofficial.github.io/Asicoder.github.io/">HERE</a></string>
    <string name="weatherimage">weatherImage</string>
    <string name="areyousure">Do you want to delete this trip?</string>
    <string name="clicking_yes_will_erase_the_trip_forever">Clicking YES will erase the trip forever.</string>
    <string name="end_of_trip">End of trip: </string>
    <string name="start_of_trip">Start of trip: </string>
    <string name="destiny_text">Destiny: </string>
    <string name="name_of_trip">Name of trip: </string>
    <string name="editTripIVcontent_desc">Edit trip button</string>
    <string name="erase_tripIBcont_desc">Erase trip</string>
    <string name="share">Share</string>
</resources>
