<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:orientation="vertical"
    android:layout_width="match_parent"
    android:layout_height="wrap_content">

    <com.google.android.material.card.MaterialCardView
        android:id="@+id/tripsCV"
        android:layout_width="match_parent"
        android:layout_height="180dp"
        android:layout_marginStart="8dp"
        android:layout_marginLeft="8dp"
        android:layout_marginTop="8dp"
        android:layout_marginEnd="8dp"
        android:layout_marginRight="8dp"
        android:layout_marginBottom="8dp"
        android:outlineAmbientShadowColor="@android:color/black"
        tools:targetApi="p"
        app:strokeColor="@color/font_dark"
        app:strokeWidth="10dp">

        <androidx.constraintlayout.widget.ConstraintLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent">

            <ImageButton
                android:id="@+id/eraseTripBT"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="8dp"
                android:layout_marginEnd="16dp"
                android:layout_marginRight="16dp"
                android:background="@android:color/white"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintTop_toTopOf="parent"
                app:srcCompat="@drawable/rubbish" />

            <ImageButton
                android:id="@+id/editTripIBT"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="8dp"
                android:layout_marginEnd="16dp"
                android:layout_marginRight="16dp"
                android:background="@android:color/white"
                app:layout_constraintEnd_toStartOf="@+id/eraseTripBT"
                app:layout_constraintTop_toTopOf="parent"
                app:srcCompat="@drawable/outline_edit_black_18dp" />

            <TextView
                android:id="@+id/endTextView"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/end_of_trip"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintTop_toTopOf="parent"
                app:layout_constraintVertical_bias="0.9"
                tools:layout_editor_absoluteX="0dp" />

            <TextView
                android:id="@+id/startTextView"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/start_of_trip"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintTop_toTopOf="parent"
                app:layout_constraintVertical_bias="0.695"
                tools:layout_editor_absoluteX="0dp" />

            <TextView
                android:id="@+id/destinyTextView"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/destiny_text"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintTop_toTopOf="parent"
                app:layout_constraintVertical_bias="0.503"
                tools:layout_editor_absoluteX="0dp" />

            <TextView
                android:id="@+id/nameTextView"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/name_of_trip"
                app:layout_constraintBottom_toBottomOf="@+id/endTextView"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintHorizontal_bias="0.0"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent"
                app:layout_constraintVertical_bias="0.303" />
        </androidx.constraintlayout.widget.ConstraintLayout>

    </com.google.android.material.card.MaterialCardView>

</RelativeLayout>